Saya tambahin struktur dan css nya.

--- a/index.html
+++ b/index.html
@@ -3,28 +3,49 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <title>Progate Tim H22</title>
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- Start Header -->
     <header>
+        <div class="header-left">
+            Pro H 22
+        </div>
+        <div class="header-right">
 
+        </div>
     </header>
     <!-- End Header -->
 
-    <!-- Bagian Utama -->
-    <div class="top-wrapper">
-        <div class="container">
-
+    <!-- Start Bagian Utama -->
+    <main>
+        <div class="top-wrapper">
+            <div class="container">
+                
+            </div>
+    
         </div>
 
-    </div>
+        <!--Start Extra 1-->
+        <div>
+            <form action=""></form>
+        </div>
+        <!--End Extra 1-->
+
+        <!-- Start Extra 2 -->
+        <aside>
+
+        </aside>
+        <!--End Extra 2-->
+    </main>
     <!-- End Bagian Utama -->
 
-    <!-- Footer  -->
+    <!-- Start Footer -->
     <footer>
 
     </footer>
