Tambahan dr Isna

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <!-- End Header -->
 
-    <!-- Start Bagian Utama -->
+    <!-- Start Main -->
     <main>
         <div id="content">
             <div class="top-wrapper card">
@@ -53,7 +53,7 @@
         <!--End Extra 2-->
         
     </main>
-    <!-- End Bagian Utama -->
+    <!-- End Main -->
 
     <!-- Start Footer -->
     <footer>
@@ -122,7 +122,7 @@
                 <span class="transition">
                   <div class="text-wrapper">
                     <h3>Rama</h3>
-                    <p>Nama Lengkap Ramadiyan Setiawan deskripsi deskripsi deskripsi deskripsi deskripsi deskripsi deskripsi deskripsi deskripsi</p>
+                    <p>Nama Lengkap Ramadiyan Setiawan, seorang freelancer data analyst yang tertarik ke dalam dunia IT khususnya bidang front-end web developer.</p>
                   </div>
                 </span>
               </div>
