menambah deskripsi tentang riris

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
                     <div class="list">
                         <div class="wrapper">
-                            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+                            <img src="assets/riris.png">
                             <h3>Riris</h3>
                             <span class="transition">
                                 <div class="text-wrapper">
                                     <h3>Riris</h3>
-                                    <p>Nama Lengkap Riris Susanti deskripsi deskripsi deskripsi deskripsi deskripsi
-                                        deskripsi deskripsi deskripsi deskripsi</p>
+                                    <p>Nama Lengkap Riris Susanti, anak bahasa yang tertarik untuk mempelajari hal-hal baru, 
+                                        mempelajari bahasa pemrograman menjadi salah satunya.</p>
                                 </div>
                             </span>
                         </div>
