edit header +responsiv, posisi team, dan tambah footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <title>Progate Tim H22</title>
 </head>
 
@@ -15,9 +15,12 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+                <img class="logo" src="assets/digitalent.png">
             </div>
             <!-- Tambahkan ikon menu disini -->
+            <div class="menu-icon">
+                <span class="fa fa-bars"></span>
+            </div>
             <div class="header-right">
                 <a href="#">Pelajaran</a>
                 <a href="#">Daftar</a>
@@ -29,7 +32,36 @@
 
     <!-- Start Main -->
     <main>
-        <div class="team-wrapper">
+        <div class="content-aside">
+            <div id="content">
+                <div class="top-wrapper card">
+                    <div class="container">
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, eaque dolores saepe ipsa
+                            blanditiis repellat ducimus doloribus cum nisi perspiciatis temporibus consequatur. Incidunt cum
+                            vel laborum, officia sequi odit explicabo.
+                        </p>
+                    </div>
+
+                </div>
+
+                <!--Start Extra 1-->
+                <div>
+                    <form action=""></form>
+                </div>
+                <!--End Extra 1-->
+            </div>
+
+            <!-- Start Extra 2 -->
+            <aside>
+                <div class="card">
+                    <p>Extra 2</p>
+                </div>
+            </aside>
+            <!--End Extra 2-->
+        </div>
+
+        <div class="team-wrapper card">
             <div class="container">
                 <div class="heading">
                     <h1><span>The</span> Team</h1>
@@ -52,7 +84,7 @@
 
                     <div class="list">
                         <div class="wrapper">
-                            <img src="assets/riris.png">
+                            <img src="assets/riris.jpg">
                             <h3>Riris</h3>
                             <span class="transition">
                                 <div class="text-wrapper">
@@ -112,40 +144,19 @@
                 </div>
             </div>
         </div>
-        <div id="content">
-            <div class="top-wrapper card">
-                <div class="container">
-                    <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, eaque dolores saepe ipsa
-                        blanditiis repellat ducimus doloribus cum nisi perspiciatis temporibus consequatur. Incidunt cum
-                        vel laborum, officia sequi odit explicabo.
-                    </p>
-                </div>
-
-            </div>
-
-            <!--Start Extra 1-->
-            <div>
-                <form action=""></form>
-            </div>
-            <!--End Extra 1-->
-        </div>
-
-        <!-- Start Extra 2 -->
-        <aside>
-            <div class="card">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia a at laboriosam expedita? In
-                    commodi veritatis repellendus omnis nihil possimus, dolor fugiat numquam quod ratione voluptatum?
-                    Cumque aliquam aperiam deserunt.</p>
-            </div>
-        </aside>
-        <!--End Extra 2-->
-
     </main>
     <!-- End Main -->
 
     <!-- Start Footer -->
     <footer>
+        <div class="container">
+            <img src="assets/footer.png">
+            <p>&copy;2020 | Tim H-22 Digitalent Progate HTML, CSS, & Javascript</p>
+            <a href="https://www.facebook.com/digitalent.kominfo/" target="_blank"><span class="fa fa-facebook"></span></a>
+            <a href="https://twitter.com/dts_kominfo" target="_blank"><span class="fa fa-twitter"></span></a>
+            <a href="https://www.instagram.com/digitalent.kominfo/?hl=id" target="_blank"><span class="fa fa-instagram"></span></a>
+            <a href="https://www.youtube.com/channel/UCeaEf_enHQ-StkN6I3ZOtbg" target="_blank"><span class="fa fa-youtube-play"></span></a>
+        </div>
     </footer>
     <!-- End Footer -->
 </body>
