--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                 <span class="fa fa-bars"></span>
             </div>
             <div class="header-right">
-                <a href="#">Pelajaran</a>
-                <a href="#">Daftar</a>
+                <a href="#">Home</a>
+                <a href="#">Tema Pelatihan</a>
+                <a href="#">Team</a>
                 <a href="#" class="login">Log in</a>
             </div>
         </div>
@@ -36,10 +37,10 @@
             <div id="content">
                 <div class="top-wrapper card">
                     <div class="container">
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, eaque dolores saepe ipsa
-                            blanditiis repellat ducimus doloribus cum nisi perspiciatis temporibus consequatur. Incidunt cum
-                            vel laborum, officia sequi odit explicabo.
+                        <h1>DIGITAL TALENT SCHOLARSHIP 2020</h1>
+                        <h1>(OA) ONLINE ACADEMY BATCH I</h1>
+                        <p>Program Online Academy (OA) merupakan program beasiswa pelatihan dan sertifikasi ditujukan kepada 10.000 peserta terpilih yang ingin meningkatkan keterampilan di bidang IT. 
+                            Program Online Academy merupakan kerjasama Kementerian Komunikasi dan Informatika dengan Global Techology Company.
                         </p>
                     </div>
 
@@ -55,7 +56,7 @@
             <!-- Start Extra 2 -->
             <aside>
                 <div class="card">
-                    <p>Extra 2</p>
+                    <p>Tema Pelatihan</p>
                 </div>
             </aside>
             <!--End Extra 2-->
@@ -64,7 +65,7 @@
         <div class="team-wrapper card">
             <div class="container">
                 <div class="heading">
-                    <h1><span>The</span> Team</h1>
+                    <h1><span>Programming</span> Team</h1>
                 </div>
 
                 <div class="team-list">
