--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Start Header -->
     <header id="header">
         <div class="header-left logo">
-            Pro H 22
+           <img src="assets/Logo TEAM.png">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
@@ -30,9 +30,9 @@
         <div id="content">
             <div class="top-wrapper card">
                 <div class="container">
-                    <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, eaque dolores saepe ipsa blanditiis repellat ducimus doloribus cum nisi perspiciatis temporibus consequatur. Incidunt cum vel laborum, officia sequi odit explicabo.
-                    </p>
+                  <h1>Selamat Datang di <span class="welcome">Website Project 1</span></h1>
+                  <img src="assets/Logo TEAM.png">
+                    <p></p>
                 </div>
         
             </div>
@@ -60,7 +60,7 @@
     <div class="team-wrapper">
       <div class="container">
         <div class="heading">
-          <h1><span>The</span> Team</h1>
+          <h1><span>Programming</span> Team</h1>
         </div>
 
         <div class="team-list">
@@ -71,7 +71,7 @@
                 <span class="transition">
                   <div class="text-wrapper">
                     <h3>Rima</h3>
-                    <p>Nama Lengkap Rima Anjasmara Gumilar deskripsi deskripsi deskripsi deskripsi deskripsi deskripsi deskripsi deskripsi deskripsi</p>
+                    <p>Nama Lengkap Rima Anjasmara ; Bookworm yang akhir-akhir ini terarik dengan flat design dan web programming</p>
                   </div>
                 </span>
               </div>
