--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
                 <div class="team-list">
                     <div class="list">
                         <div class="wrapper">
-                            <img src="https://prog-8.com/images/html/advanced/php.png">
+                            <img src="assets/Rima.png">
                             <h3>Rima</h3>
                             <span class="transition">
                                 <div class="text-wrapper">
                                     <h3>Rima</h3>
-                                    <p>Nama Lengkap Rima Anjasmara Gumilar deskripsi deskripsi deskripsi deskripsi
-                                        deskripsi deskripsi deskripsi deskripsi deskripsi</p>
+                                    <p>Nama Lengkap Rima Anjasmara ; Bookworm yang akhir-akhir ini tertarik
+                                        dengan dunia Flat Design dan Web Programming
+                                    </p>
                                 </div>
                             </span>
                         </div>
