--- a/index.html
+++ b/index.html
@@ -34,36 +34,24 @@
 
     <!-- Start Main -->
     <main>
+        <!--Start DTS Explanation-->
         <div class="content-aside">
-            <div id="content">
-                <div class="top-wrapper card">
-                    <div class="container">
-                        <h1>DIGITAL TALENT SCHOLARSHIP 2020</h1>
-                        <h1>(OA) ONLINE ACADEMY BATCH I</h1>
-                        <p>Program Online Academy (OA) merupakan program beasiswa pelatihan dan sertifikasi ditujukan kepada 10.000 peserta terpilih yang ingin meningkatkan keterampilan di bidang IT. 
-                            Program Online Academy merupakan kerjasama Kementerian Komunikasi dan Informatika dengan Global Techology Company.
-                        </p>
-                    </div>
-
+            <div class="top-wrapper">
+                <div class="container">
+                    <h1 class="dts">DIGITAL TALENT SCHOLARSHIP 2020<br/>(OA) ONLINE ACADEMY BATCH I</h1>
+                    <p class="dts">Program Online Academy (OA) merupakan program beasiswa pelatihan dan sertifikasi ditujukan kepada 10.000 peserta terpilih yang ingin meningkatkan keterampilan di bidang IT. Program Online Academy merupakan kerjasama Kementerian Komunikasi dan Informatika dengan Global Techology Company.
+                    <br>
+                    Materi Pelatihan dalam Online Academy disusun oleh Global Technology Company yang bertujuan untuk memenuhi kebutuhan sumber daya manusia di bidang IT dan meningkatkan kompetensi sumber daya manusia Indonesia yang memiliki keahlian di bidang profesi masing-masing untuk memperoleh kompetensi tambahan serta menciptakan sumber daya manusia yang lebih adaptif dan produktif dengan mengoptimalisasi teknologi, Online Academy juga bertujuan untuk meningkatkan kualitas sumber daya manusia di bidang IT demi memenangkan persaingan global.
+                    <br>
+                    Peserta Online Academy akan belajar secara mandiri secara daring/online, peserta mengatur waktu belajar secara mandiri sesuai dengan waktu yang telah ditentukan.
+                    </p>
                 </div>
-
-                <!--Start Extra 1-->
-                <div>
-                    <form action=""></form>
-                </div>
-                <!--End Extra 1-->
             </div>
-
-            <!-- Start Extra 2 -->
-            <aside>
-                <div class="card">
-                    <p>Tema Pelatihan</p>
-                </div>
-            </aside>
-            <!--End Extra 2-->
         </div>
+        <!--End DTS Explanation-->
 
-        <div class="team-wrapper card">
+        <!-- Start Programming Team -->
+        <div class="team-wrapper">
             <div class="container">
                 <div class="heading">
                     <h1><span>Programming</span> Team</h1>
@@ -97,6 +85,7 @@
                             </span>
                         </div>
                     </div>
+
                     <div class="list">
                         <div class="wrapper">
                             <img src="assets/yudo.png">
@@ -141,11 +130,23 @@
                             </span>
                         </div>
                     </div>
-
                     <div class="clear"></div>
                 </div>
             </div>
         </div>
+        <!--End Programming Team-->
+
+        <!--Start Extra 1-->
+        <div>
+
+        </div>
+        <!--End Extra 1-->
+
+        <!--Start Extra 2-->
+        <div>
+
+        </div>
+        <!--End Extra 2-->
     </main>
     <!-- End Main -->
 
