Plus login.html

--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
             <div class="header-left">
                 <img class="logo" src="assets/digitalent.png">
             </div>
-            <!-- Tambahkan ikon menu disini -->
+
             <div class="menu-icon">
                 <span class="fa fa-bars"></span>
             </div>
             <div class="header-right">
-                <a href="#">Home</a>
-                <a href="#">Tema Pelatihan</a>
-                <a href="#">Team</a>
-                <a href="#" class="login">Log in</a>
+                <a href="#home">Home</a>
+                <a href="#pelatihan">Tema Pelatihan</a>
+                <a href="#team">Team</a>
+                <a href="login.html">Log In</a>
             </div>
-
         </div>
     </header>
     <!-- End Header -->
@@ -35,23 +34,21 @@
     <!-- Start Main -->
     <main>
         <!--Start DTS Explanation-->
-        <div class="content-aside">
-            <div class="top-wrapper">
-                <div class="container">
-                    <h1 class="dts">DIGITAL TALENT SCHOLARSHIP 2020<br/>(OA) ONLINE ACADEMY BATCH I</h1>
-                    <p class="dts">Program Online Academy (OA) merupakan program beasiswa pelatihan dan sertifikasi ditujukan kepada 10.000 peserta terpilih yang ingin meningkatkan keterampilan di bidang IT. Program Online Academy merupakan kerjasama Kementerian Komunikasi dan Informatika dengan Global Techology Company.
-                    <br>
-                    Materi Pelatihan dalam Online Academy disusun oleh Global Technology Company yang bertujuan untuk memenuhi kebutuhan sumber daya manusia di bidang IT dan meningkatkan kompetensi sumber daya manusia Indonesia yang memiliki keahlian di bidang profesi masing-masing untuk memperoleh kompetensi tambahan serta menciptakan sumber daya manusia yang lebih adaptif dan produktif dengan mengoptimalisasi teknologi, Online Academy juga bertujuan untuk meningkatkan kualitas sumber daya manusia di bidang IT demi memenangkan persaingan global.
-                    <br>
-                    Peserta Online Academy akan belajar secara mandiri secara daring/online, peserta mengatur waktu belajar secara mandiri sesuai dengan waktu yang telah ditentukan.
-                    </p>
-                </div>
+        <div id="home" class="content-aside">
+            <div class="container">
+                <h1 class="dts">DIGITAL TALENT SCHOLARSHIP 2020<br/>(OA) ONLINE ACADEMY BATCH I</h1>
+                <p class="dts">Program Online Academy (OA) merupakan program beasiswa pelatihan dan sertifikasi ditujukan kepada 10.000 peserta terpilih yang ingin meningkatkan keterampilan di bidang IT. Program Online Academy merupakan kerjasama Kementerian Komunikasi dan Informatika dengan Global Techology Company.
+                <br>
+                Materi Pelatihan dalam Online Academy disusun oleh Global Technology Company yang bertujuan untuk memenuhi kebutuhan sumber daya manusia di bidang IT dan meningkatkan kompetensi sumber daya manusia Indonesia yang memiliki keahlian di bidang profesi masing-masing untuk memperoleh kompetensi tambahan serta menciptakan sumber daya manusia yang lebih adaptif dan produktif dengan mengoptimalisasi teknologi, Online Academy juga bertujuan untuk meningkatkan kualitas sumber daya manusia di bidang IT demi memenangkan persaingan global.
+                <br>
+                Peserta Online Academy akan belajar secara mandiri secara daring/online, peserta mengatur waktu belajar secara mandiri sesuai dengan waktu yang telah ditentukan.
+                </p>
             </div>
         </div>
         <!--End DTS Explanation-->
 
         <!-- Start Programming Team -->
-        <div class="team-wrapper">
+        <div id="team" class="team-wrapper">
             <div class="container">
                 <div class="heading">
                     <h1><span>Programming</span> Team</h1>
@@ -137,16 +134,10 @@
         <!--End Programming Team-->
 
         <!--Start Extra 1-->
-        <div>
+        <div id="pelatihan">
 
         </div>
         <!--End Extra 1-->
-
-        <!--Start Extra 2-->
-        <div>
-
-        </div>
-        <!--End Extra 2-->
     </main>
     <!-- End Main -->
 
