--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="header-right">
                 <a href="#home">Home</a>
-                <a href="#pelatihan">Tema Pelatihan</a>
+                <a href="#contact">Kontak Kami</a>
                 <a href="#team">Team</a>
                 <a href="login.html">Log In</a>
             </div>
@@ -31,125 +31,156 @@
     </header>
     <!-- End Header -->
 
-    <!-- Start Main -->
-    <main>
-        <!--Start DTS Explanation-->
-        <div id="home" class="content-aside">
-            <div class="container">
-                <h1 class="dts">DIGITAL TALENT SCHOLARSHIP 2020<br/>(OA) ONLINE ACADEMY BATCH I</h1>
-                <p class="dts">Program Online Academy (OA) merupakan program beasiswa pelatihan dan sertifikasi ditujukan kepada 10.000 peserta terpilih yang ingin meningkatkan keterampilan di bidang IT. Program Online Academy merupakan kerjasama Kementerian Komunikasi dan Informatika dengan Global Techology Company.
+    <!--Start DTS Explanation-->
+    <div id="home" class="content-aside">
+        <div class="container">
+            <h1 class="dts">DIGITAL TALENT SCHOLARSHIP 2020<br />(OA) ONLINE ACADEMY BATCH I</h1>
+            <p class="dts">Program Online Academy (OA) merupakan program beasiswa pelatihan dan sertifikasi ditujukan
+                kepada 10.000 peserta terpilih yang ingin meningkatkan keterampilan di bidang IT. Program Online Academy
+                merupakan kerjasama Kementerian Komunikasi dan Informatika dengan Global Techology Company.
                 <br>
-                Materi Pelatihan dalam Online Academy disusun oleh Global Technology Company yang bertujuan untuk memenuhi kebutuhan sumber daya manusia di bidang IT dan meningkatkan kompetensi sumber daya manusia Indonesia yang memiliki keahlian di bidang profesi masing-masing untuk memperoleh kompetensi tambahan serta menciptakan sumber daya manusia yang lebih adaptif dan produktif dengan mengoptimalisasi teknologi, Online Academy juga bertujuan untuk meningkatkan kualitas sumber daya manusia di bidang IT demi memenangkan persaingan global.
+                Materi Pelatihan dalam Online Academy disusun oleh Global Technology Company yang bertujuan untuk
+                memenuhi kebutuhan sumber daya manusia di bidang IT dan meningkatkan kompetensi sumber daya manusia
+                Indonesia yang memiliki keahlian di bidang profesi masing-masing untuk memperoleh kompetensi tambahan
+                serta menciptakan sumber daya manusia yang lebih adaptif dan produktif dengan mengoptimalisasi
+                teknologi, Online Academy juga bertujuan untuk meningkatkan kualitas sumber daya manusia di bidang IT
+                demi memenangkan persaingan global.
                 <br>
-                Peserta Online Academy akan belajar secara mandiri secara daring/online, peserta mengatur waktu belajar secara mandiri sesuai dengan waktu yang telah ditentukan.
-                </p>
-            </div>
+                Peserta Online Academy akan belajar secara mandiri secara daring/online, peserta mengatur waktu belajar
+                secara mandiri sesuai dengan waktu yang telah ditentukan.
+            </p>
         </div>
-        <!--End DTS Explanation-->
+    </div>
+    <!--End DTS Explanation-->
 
-        <!-- Start Programming Team -->
-        <div id="team" class="team-wrapper">
-            <div class="container">
-                <div class="heading">
-                    <h1><span>Programming</span> Team</h1>
+    <!-- Start Programming Team -->
+    <div id="team" class="team-wrapper">
+        <div class="container">
+            <div class="heading">
+                <h1><span>Programming</span> Team</h1>
+            </div>
+
+            <div class="team-list">
+                <div class="list">
+                    <div class="wrapper">
+                        <img src="https://prog-8.com/images/html/advanced/php.png">
+                        <h3>Rima</h3>
+                        <span class="transition">
+                            <div class="text-wrapper">
+                                <h3>Rima</h3>
+                                <p>Nama Lengkap Rima Anjasmara Gumilar deskripsi deskripsi deskripsi deskripsi
+                                    deskripsi deskripsi deskripsi deskripsi deskripsi</p>
+                            </div>
+                        </span>
+                    </div>
                 </div>
 
-                <div class="team-list">
-                    <div class="list">
-                        <div class="wrapper">
-                            <img src="https://prog-8.com/images/html/advanced/php.png">
-                            <h3>Rima</h3>
-                            <span class="transition">
-                                <div class="text-wrapper">
-                                    <h3>Rima</h3>
-                                    <p>Nama Lengkap Rima Anjasmara Gumilar deskripsi deskripsi deskripsi deskripsi
-                                        deskripsi deskripsi deskripsi deskripsi deskripsi</p>
-                                </div>
-                            </span>
-                        </div>
+                <div class="list">
+                    <div class="wrapper">
+                        <img src="assets/riris.jpg">
+                        <h3>Riris</h3>
+                        <span class="transition">
+                            <div class="text-wrapper">
+                                <h3>Riris</h3>
+                                <p>Nama Lengkap Riris Susanti, anak bahasa yang tertarik untuk mempelajari hal-hal baru,
+                                    mempelajari bahasa pemrograman menjadi salah satunya.</p>
+                            </div>
+                        </span>
                     </div>
-
-                    <div class="list">
-                        <div class="wrapper">
-                            <img src="assets/riris.jpg">
-                            <h3>Riris</h3>
-                            <span class="transition">
-                                <div class="text-wrapper">
-                                    <h3>Riris</h3>
-                                    <p>Nama Lengkap Riris Susanti, anak bahasa yang tertarik untuk mempelajari hal-hal baru, 
-                                        mempelajari bahasa pemrograman menjadi salah satunya.</p>
-                                </div>
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="list">
-                        <div class="wrapper">
-                            <img src="assets/yudo.png">
-                            <h3>Prayudo</h3>
-                            <span class="transition">
-                                <div class="text-wrapper">
-                                    <h3>Prayudo</h3>
-                                    <p>Nama Lengkap Prayudo Gumilar, Seorang pegawai swasta yang tertarik dengan dunia
-                                        programming khususnya
-                                        Web Developer
-                                    </p>
-                                </div>
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="list">
-                        <div class="wrapper">
-                            <img src="assets/isna.png">
-                            <h3>Isna</h3>
-                            <span class="transition">
-                                <div class="text-wrapper">
-                                    <h3>Isna</h3>
-                                    <p>Nama Lengkap R Siti Isnaniyah, seorang pegawai swasta yang tertarik mengikuti
-                                        pelatihan ini karena ingin mempelajari lebih detail mengenai HTML,CSS, &
-                                        Javascript.</p>
-                                </div>
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="list">
-                        <div class="wrapper">
-                            <img src="assets/rama.png">
-                            <h3>Rama</h3>
-                            <span class="transition">
-                                <div class="text-wrapper">
-                                    <h3>Rama</h3>
-                                    <p>Nama Lengkap Ramadiyan Setiawan, seorang freelancer data analyst yang tertarik ke
-                                        dalam dunia IT khususnya bidang front-end web developer.</p>
-                                </div>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="clear"></div>
                 </div>
+
+                <div class="list">
+                    <div class="wrapper">
+                        <img src="assets/udo.JPG">
+                        <h3>Prayudo</h3>
+                        <span class="transition">
+                            <div class="text-wrapper">
+                                <h3>Prayudo</h3>
+                                <p>Nama Lengkap Prayudo Gumilar, Seorang pegawai swasta yang tertarik dengan dunia
+                                    programming khususnya
+                                    Web Developer
+                                </p>
+                            </div>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="list">
+                    <div class="wrapper">
+                        <img src="assets/isna.png">
+                        <h3>Isna</h3>
+                        <span class="transition">
+                            <div class="text-wrapper">
+                                <h3>Isna</h3>
+                                <p>Nama Lengkap R Siti Isnaniyah, seorang pegawai swasta yang tertarik mengikuti
+                                    pelatihan ini karena ingin mempelajari lebih detail mengenai HTML,CSS, &
+                                    Javascript.</p>
+                            </div>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="list">
+                    <div class="wrapper">
+                        <img src="assets/rama.png">
+                        <h3>Rama</h3>
+                        <span class="transition">
+                            <div class="text-wrapper">
+                                <h3>Rama</h3>
+                                <p>Nama Lengkap Ramadiyan Setiawan, seorang freelancer data analyst yang tertarik ke
+                                    dalam dunia IT khususnya bidang front-end web developer.</p>
+                            </div>
+                        </span>
+                    </div>
+                </div>
+                <div class="clear"></div>
             </div>
         </div>
-        <!--End Programming Team-->
+    </div>
+    <!--End Programming Team-->
 
-        <!--Start Extra 1-->
-        <div id="pelatihan">
+    <!--Start Extra 1-->
+    <div class="contact" id="contact">
+        <div class="container">
+            <div class="kontak">
+                <h1>Kontak Kami</h1>
+            </div>
+            <div class="form">
+                <form action="">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Your email..">
+
+                    <label for="phone">Phone Number</label>
+                    <input type="number" id="phone" name="phone" placeholder="Your Phone Number..">
+
+                    <label for="phone">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message.."></textarea>
+
+
+                    <input type="submit" value="Submit">
+            </div>
         </div>
-        <!--End Extra 1-->
-    </main>
-    <!-- End Main -->
+    </div>
+    <!--End Extra 1-->
 
     <!-- Start Footer -->
     <footer>
         <div class="container">
             <img src="assets/footer.png">
             <p>&copy;2020 | Tim H-22 Digitalent Progate HTML, CSS, & Javascript</p>
-            <a href="https://www.facebook.com/digitalent.kominfo/" target="_blank"><span class="fa fa-facebook"></span></a>
+            <a href="https://www.facebook.com/digitalent.kominfo/" target="_blank"><span
+                    class="fa fa-facebook"></span></a>
             <a href="https://twitter.com/dts_kominfo" target="_blank"><span class="fa fa-twitter"></span></a>
-            <a href="https://www.instagram.com/digitalent.kominfo/?hl=id" target="_blank"><span class="fa fa-instagram"></span></a>
-            <a href="https://www.youtube.com/channel/UCeaEf_enHQ-StkN6I3ZOtbg" target="_blank"><span class="fa fa-youtube-play"></span></a>
+            <a href="https://www.instagram.com/digitalent.kominfo/?hl=id" target="_blank"><span
+                    class="fa fa-instagram"></span></a>
+            <a href="https://www.youtube.com/channel/UCeaEf_enHQ-StkN6I3ZOtbg" target="_blank"><span
+                    class="fa fa-youtube-play"></span></a>
         </div>
     </footer>
     <!-- End Footer -->
