--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
             <div class="header-right">
                 <a href="#home">Home</a>
-                <a href="#contact">Kontak Kami</a>
                 <a href="#team">Team</a>
+                <a href="#contact">Kontak Kami</a>
                 <a href="login.html">Log In</a>
             </div>
         </div>
@@ -32,20 +32,21 @@
     <!-- End Header -->
 
     <!--Start DTS Explanation-->
-    <div id="home" class="content-aside">
+    <div id="home"></div>
+    <div class="content">
         <div class="container">
-            <h1 class="dts">DIGITAL TALENT SCHOLARSHIP 2020<br />(OA) ONLINE ACADEMY BATCH I</h1>
-            <p class="dts">Program Online Academy (OA) merupakan program beasiswa pelatihan dan sertifikasi ditujukan
+            <h1>DIGITAL TALENT SCHOLARSHIP 2020<br />(OA) ONLINE ACADEMY BATCH I</h1>
+            <p>Program Online Academy (OA) merupakan program beasiswa pelatihan dan sertifikasi ditujukan
                 kepada 10.000 peserta terpilih yang ingin meningkatkan keterampilan di bidang IT. Program Online Academy
                 merupakan kerjasama Kementerian Komunikasi dan Informatika dengan Global Techology Company.
-                <br>
+                <br><br><br>
                 Materi Pelatihan dalam Online Academy disusun oleh Global Technology Company yang bertujuan untuk
                 memenuhi kebutuhan sumber daya manusia di bidang IT dan meningkatkan kompetensi sumber daya manusia
                 Indonesia yang memiliki keahlian di bidang profesi masing-masing untuk memperoleh kompetensi tambahan
                 serta menciptakan sumber daya manusia yang lebih adaptif dan produktif dengan mengoptimalisasi
                 teknologi, Online Academy juga bertujuan untuk meningkatkan kualitas sumber daya manusia di bidang IT
                 demi memenangkan persaingan global.
-                <br>
+                <br><br><br>
                 Peserta Online Academy akan belajar secara mandiri secara daring/online, peserta mengatur waktu belajar
                 secara mandiri sesuai dengan waktu yang telah ditentukan.
             </p>
@@ -54,7 +55,8 @@
     <!--End DTS Explanation-->
 
     <!-- Start Programming Team -->
-    <div id="team" class="team-wrapper">
+    <div id="team"></div>
+    <div class="team-wrapper">
         <div class="container">
             <div class="heading">
                 <h1><span>Programming</span> Team</h1>
@@ -69,8 +71,7 @@
                             <div class="text-wrapper">
                                 <h3>Rima</h3>
                                 <p>Nama Lengkap Rima Anjasmara ; Bookworm yang akhir-akhir ini tertarik
-                                        dengan dunia Flat Design dan Web Programming
-                                    </p>
+                                        dengan dunia Flat Design dan Web Programming</p>
                             </div>
                         </span>
                     </div>
@@ -90,7 +91,6 @@
                     </div>
                 </div>
 
-
                 <div class="list">
                     <div class="wrapper">
                         <img src="assets/udo.JPG">
@@ -104,7 +104,6 @@
                                 </p>
                             </div>
                         </span>
-
                     </div>
                 </div>
 
@@ -143,7 +142,8 @@
     <!--End Programming Team-->
 
     <!--Start Extra 1-->
-    <div class="contact" id="contact">
+    <div id="contact"></div>
+    <div class="contact">
         <div class="container">
             <div class="kontak">
                 <h1>Kontak Kami</h1>
