--- a/login.html
+++ b/login.html
@@ -30,7 +30,25 @@
 
     <!-- Start Main -->
     <main>
-        <!--Start Extra 2-->
+        <div id="home"></div>
+        <div class="login_content">
+        <p class="title_login">Silahkan login</p>
+            <form>
+                <label>Username</label>
+                <input type="text" name="username" class="form_login" placeholder="Username">
+             
+                <label>Password</label>
+                <input type="password" name="password" class="form_login" placeholder="Password ..">
+
+                <br>
+                <input type="submit" class="submit_login" value="LOGIN">
+                <center>
+                    <a class="back_login" href="index.html">KEMBALI</a>
+                </center>
+            </form>
+        </div>
+
+        <!--Start Extra 2
         <div class="container login">
             <div class="form-input">
                 <span class="iconify"
@@ -46,7 +64,7 @@
                 <input type="password" placeholder="Enter your password" />
             </div>
         </div>
-        <!--End Extra 2-->
+        End Extra 2-->
     </main>
     <!-- End Main -->
 
