modify index.html and delete comment

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <div class="text-wrapper">
                                 <h3>Rima</h3>
                                 <p>Nama Lengkap Rima Anjasmara ; Bookworm yang akhir-akhir ini tertarik
-                                        dengan dunia Flat Design dan Web Programming</p>
+                                    dengan dunia Flat Design dan Web Programming</p>
                             </div>
                         </span>
                     </div>
@@ -166,7 +166,7 @@
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message.."></textarea>
 
 
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" class="btn-submit">
             </div>
         </div>
     </div>
