modify login.html and delete comment

--- a/login.html
+++ b/login.html
@@ -32,11 +32,11 @@
     <main>
         <div id="home"></div>
         <div class="login_content">
-        <p class="title_login">Silahkan login</p>
+            <p class="title_login">Silahkan login</p>
             <form>
                 <label>Username</label>
                 <input type="text" name="username" class="form_login" placeholder="Username">
-             
+
                 <label>Password</label>
                 <input type="password" name="password" class="form_login" placeholder="Password ..">
 
@@ -47,24 +47,6 @@
                 </center>
             </form>
         </div>
-
-        <!--Start Extra 2
-        <div class="container login">
-            <div class="form-input">
-                <span class="iconify"
-                    data-icon="ic:round-email"
-                    data-inline="false"></span>
-                <input type="text"
-                placeholder="Enter your email" />
-            </div>
-            <div class="form-input">
-                <span class="iconify"
-                    data-icon="fa-solid:lock"
-                    data-inline="false"></span>
-                <input type="password" placeholder="Enter your password" />
-            </div>
-        </div>
-        End Extra 2-->
     </main>
     <!-- End Main -->
 
@@ -73,10 +55,13 @@
         <div class="container">
             <img src="assets/footer.png">
             <p>&copy;2020 | Tim H-22 Digitalent Progate HTML, CSS, & Javascript</p>
-            <a href="https://www.facebook.com/digitalent.kominfo/" target="_blank"><span class="fa fa-facebook"></span></a>
+            <a href="https://www.facebook.com/digitalent.kominfo/" target="_blank"><span
+                    class="fa fa-facebook"></span></a>
             <a href="https://twitter.com/dts_kominfo" target="_blank"><span class="fa fa-twitter"></span></a>
-            <a href="https://www.instagram.com/digitalent.kominfo/?hl=id" target="_blank"><span class="fa fa-instagram"></span></a>
-            <a href="https://www.youtube.com/channel/UCeaEf_enHQ-StkN6I3ZOtbg" target="_blank"><span class="fa fa-youtube-play"></span></a>
+            <a href="https://www.instagram.com/digitalent.kominfo/?hl=id" target="_blank"><span
+                    class="fa fa-instagram"></span></a>
+            <a href="https://www.youtube.com/channel/UCeaEf_enHQ-StkN6I3ZOtbg" target="_blank"><span
+                    class="fa fa-youtube-play"></span></a>
         </div>
     </footer>
     <!-- End Footer -->
