--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <!--End DTS Explanation-->
 
-    <!-- Start Programming Team -->
+    <!-- Start Extra 1 -->
     <div id="team"></div>
     <div class="team-wrapper">
         <div class="container">
@@ -139,9 +139,9 @@
             </div>
         </div>
     </div>
-    <!--End Programming Team-->
+    <!--End Extra 1-->
 
-    <!--Start Extra 1-->
+    <!--Start Extra 2-->
     <div id="contact"></div>
     <div class="contact">
         <div class="container">
