--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
     </header>
     <!-- End Header -->
 
-    <!-- Start Main -->
+    <!-- Start Extra 3 -->
     <main>
         <div id="home"></div>
         <div class="login_content">
@@ -48,7 +48,7 @@
             </form>
         </div>
     </main>
-    <!-- End Main -->
+    <!-- End Extra 3 -->
 
     <!-- Start Footer -->
     <footer>
